--- a/src/custom-font.css
+++ b/src/custom-font.css
@@ -1,6 +1,26 @@
 @font-face {
   font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: normal;
-  src: local('Montserrat'), url('MYRIADPRO-REGULAR.woff') format('woff');
+  src: url('../src/assets/fonts/montserrat/Montserrat-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('../src/assets/fonts/roboto/regular.ttf');
+}
+
+@font-face {
+  font-family: 'Lato';
+  src: url('../src/assets/fonts/lato/Lato-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'Lato';
+  src: url('../src/assets/fonts/lato/Lato-Bold.ttf');
+}
+
+@theme {
+  --font-montserrat: Montserrat, "sans-serif";
+  --font-roboto: Roboto, "sans-serif";
+  --font-lato-regular: Lato, "sans-serif";
+  --font-lato-bold: Lato, "sans-serif";
 }
