--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,11 @@
 @import "tailwindcss";
 @import "./custom-font.css";
+@import "./custom-theme.css";
+
+html {
+  scroll-behavior: smooth
+}
+
+body {
+  background-color: black;
+}
