--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,6 @@ html {
 }
 
 body {
-  background-color: black;
+background: #020024;
+background: linear-gradient(150deg,rgba(2, 0, 36, 1) 9%, rgba(144, 0, 248, 1) 58%, rgba(2, 0, 36, 1) 100%);
 }
