--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,18 @@ html {
 }
 
 body {
-background: #020024;
-background: linear-gradient(150deg,rgba(2, 0, 36, 1) 9%, rgba(144, 0, 248, 1) 58%, rgba(2, 0, 36, 1) 100%);
+  position: relative;
+  min-height: 100vh;
+}
+
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(150deg, rgba(2, 0, 36, 1) 9%, rgba(144, 0, 248, 1) 58%, rgba(2, 0, 36, 1) 100%);
+  filter: blur(5px);
+  z-index: -1;
 }
