About Me completed

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(150deg, rgba(2, 0, 36, 1) 9%, rgba(144, 0, 248, 1) 58%, rgba(2, 0, 36, 1) 100%);
+  background: linear-gradient(32deg,rgba(78, 101, 255, 1) 28%, rgba(146, 239, 253, 1) 73%);
   filter: blur(5px);
   z-index: -1;
 }
